[package]
name = "opam-file-format-rs"
version = "0.1.0"
authors = ["PhotonQuantum <self@lightquantum.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "^0.11.4"
regex = "^1.4.1"
lazy_static = "^1.4.0"
plex = "^0.2.5"
colored = "^2.0.0"